--- a/index.html
+++ b/index.html
@@ -103,63 +103,107 @@ ul { padding-left: 20px; }
 
 <!-- INICIO -->
 <section id="inicio">
-<h1
-data-es="Bienvenidos a NovaTrade Logistics"
-data-en="Welcome to NovaTrade Logistics"></h1>
+<h1 data-es="Bienvenidos a NovaTrade Logistics"
+    data-en="Welcome to NovaTrade Logistics"></h1>
 
-<p
-data-es="Somos una empresa especializada en la gestión logística internacional, orientada a facilitar operaciones de importación, exportación y tránsito de mercancías."
-data-en="We are a company specialized in international logistics management, facilitating import, export and transit operations."></p>
+<p data-es="Somos una empresa especializada en la gestión logística internacional, orientada a facilitar operaciones de importación, exportación y tránsito de mercancías de manera segura, eficiente y conforme a la normativa vigente."
+   data-en="We are a company specialized in international logistics management, focused on facilitating import, export, and transit operations in a secure, efficient, and compliant manner."></p>
 
-<p
-data-es="Nuestro compromiso es brindar soluciones confiables y adaptadas a las necesidades de cada cliente, garantizando procesos ágiles y seguros en cada etapa de la cadena de suministro."
-data-en="Our commitment is to provide reliable solutions tailored to each client, ensuring agile and secure processes throughout the supply chain."></p>
+<p data-es="Acompañamos a nuestros clientes en cada etapa del proceso logístico, desde la planificación inicial hasta la entrega final, actuando como un socio estratégico y un punto único de contacto."
+   data-en="We support our clients at every stage of the logistics process, from initial planning to final delivery, acting as a strategic partner and single point of contact."></p>
 
-<p
-data-es="Con presencia en mercados estratégicos y un equipo altamente capacitado, NovaTrade Logistics se posiciona como un aliado clave para empresas que buscan expandir sus operaciones internacionales."
-data-en="With presence in strategic markets and a highly trained team, NovaTrade Logistics positions itself as a key partner for companies seeking to expand their international operations."></p>
+<p data-es="Nuestro enfoque se basa en la optimización de tiempos, control de costos y mitigación de riesgos, permitiendo a las empresas concentrarse en su crecimiento comercial."
+   data-en="Our approach is based on time optimization, cost control, and risk mitigation, allowing companies to focus on their commercial growth."></p>
+
+<ul>
+  <li data-es="Cobertura para importación, exportación y tránsito internacional."
+      data-en="Coverage for import, export, and international transit."></li>
+  <li data-es="Atención personalizada y asesoría continua."
+      data-en="Personalized service and continuous advisory."></li>
+  <li data-es="Procesos alineados a estándares internacionales."
+      data-en="Processes aligned with international standards."></li>
+</ul>
 </section>
 
 <!-- SERVICIOS -->
 <section id="servicios">
 <h2 data-es="Servicios" data-en="Services"></h2>
 
-<p
-data-es="Brindamos soluciones integrales en gestión logística internacional, asegurando control, eficiencia y cumplimiento durante todo el proceso."
-data-en="We provide comprehensive international logistics management solutions, ensuring control, efficiency and compliance throughout the process."></p>
+<p data-es="Ofrecemos soluciones logísticas integrales diseñadas para garantizar control, trazabilidad y cumplimiento en cada operación de comercio exterior."
+   data-en="We offer comprehensive logistics solutions designed to ensure control, traceability, and compliance in every foreign trade operation."></p>
 
 <ul>
-<li data-es="Gestión aduanera: Clasificación arancelaria, trámites de importación y exportación y cumplimiento normativo."
-    data-en="Customs management: Tariff classification, import/export procedures and regulatory compliance."></li>
-<li data-es="Transporte internacional: Coordinación de envíos marítimos, aéreos y terrestres con cobertura global."
-    data-en="International transport: Coordination of maritime, air and land shipments with global coverage."></li>
-<li data-es="Consultoría en comercio exterior: Asesoría en regulaciones y optimización de costos."
-    data-en="Foreign trade consulting: Advisory on regulations and cost optimization."></li>
-<li data-es="Gestión documental: Control y administración de documentos logísticos."
-    data-en="Document management: Control and administration of logistics documents."></li>
+<li data-es="Gestión aduanera integral: Clasificación arancelaria, elaboración y presentación de documentos, coordinación con autoridades aduaneras y cumplimiento normativo."
+    data-en="Comprehensive customs management: Tariff classification, document preparation and submission, coordination with customs authorities, and regulatory compliance."></li>
+
+<li data-es="Transporte internacional multimodal: Coordinación de envíos marítimos, aéreos y terrestres, optimizando rutas, tiempos y costos."
+    data-en="Multimodal international transport: Coordination of maritime, air, and land shipments, optimizing routes, time, and costs."></li>
+
+<li data-es="Consultoría en comercio exterior: Asesoría estratégica en regulaciones, tratados comerciales, estructura de costos y planificación logística."
+    data-en="Foreign trade consulting: Strategic advisory on regulations, trade agreements, cost structures, and logistics planning."></li>
+
+<li data-es="Gestión documental y seguimiento: Control de documentos, trazabilidad de operaciones y comunicación constante con el cliente."
+    data-en="Document management and tracking: Document control, operation traceability, and constant client communication."></li>
 </ul>
 
-<p
-data-es="Cada servicio está diseñado para ofrecer tranquilidad y confianza."
-data-en="Each service is designed to provide peace of mind and confidence."></p>
+<p data-es="Nuestros servicios están diseñados para adaptarse a empresas de distintos sectores y tamaños, brindando soluciones flexibles y escalables."
+   data-en="Our services are designed to adapt to companies of different sectors and sizes, providing flexible and scalable solutions."></p>
 </section>
 
 <!-- NOSOTROS -->
 <section id="nosotros">
 <h2 data-es="Quiénes Somos" data-en="About Us"></h2>
 
-<p
-data-es="NovaTrade Logistics acompaña a sus clientes como punto único de contacto en sus operaciones logísticas internacionales."
-data-en="NovaTrade Logistics acts as a single point of contact for international logistics operations."></p>
+<p data-es="NovaTrade Logistics nace con el objetivo de simplificar la logística internacional y convertirse en un aliado confiable para empresas que operan en mercados globales."
+   data-en="NovaTrade Logistics was created with the goal of simplifying international logistics and becoming a reliable partner for companies operating in global markets."></p>
 
-<p
-data-es="Nuestra misión es simplificar la logística internacional mediante procesos eficientes y transparentes."
-data-en="Our mission is to simplify international logistics through efficient and transparent processes."></p>
+<p data-es="Nuestro equipo cuenta con experiencia en comercio exterior, logística y gestión aduanera, lo que nos permite anticipar riesgos y proponer soluciones eficientes."
+   data-en="Our team has experience in foreign trade, logistics, and customs management, allowing us to anticipate risks and propose efficient solutions."></p>
 
 <ul>
-<li data-es="Visión: Ser líderes en soluciones logísticas internacionales en Centroamérica."
-    data-en="Vision: To be leaders in international logistics solutions in Central America."></li>
-<li data-es="Misión: Facilitar el comercio global con servicios confiables."
-    data-en="Mission: Facilitate global trade with reliable services."></li>
-<li data-es="Valores: Transparencia, compromiso e innovación."
-    data-en="Values: Transparency
+<li data-es="Visión: Consolidarnos como referentes en soluciones logísticas internacionales en Centroamérica."
+    data-en="Vision: To consolidate ourselves as a benchmark in international logistics solutions in Central America."></li>
+<li data-es="Misión: Facilitar el comercio global mediante servicios logísticos confiables, transparentes y personalizados."
+    data-en="Mission: To facilitate global trade through reliable, transparent, and customized logistics services."></li>
+<li data-es="Valores: Transparencia, compromiso, excelencia operativa e innovación."
+    data-en="Values: Transparency, commitment, operational excellence, and innovation."></li>
+</ul>
+</section>
+
+<!-- CONTACTO -->
+<section id="contacto">
+<h2 data-es="Contacto" data-en="Contact"></h2>
+
+<p data-es="Email: novaatradelogistics@gmail.com | WhatsApp: (+502) 5471-8568"
+   data-en="Email: novaatradelogistics@gmail.com | WhatsApp: (+502) 5471-8568"></p>
+
+<p data-es="Nuestro equipo está disponible para atender consultas, cotizaciones y asesorías personalizadas."
+   data-en="Our team is available to assist with inquiries, quotations, and personalized advisory."></p>
+
+<ul>
+<li data-es="Atención profesional y oportuna."
+    data-en="Professional and timely service."></li>
+<li data-es="Respuesta rápida a solicitudes comerciales."
+    data-en="Fast response to commercial requests."></li>
+<li data-es="Acompañamiento continuo durante la operación."
+    data-en="Continuous support throughout the operation."></li>
+</ul>
+</section>
+
+</div>
+
+<footer>
+© 2025 NovaTrade Logistics · Gestión logística internacional
+</footer>
+
+<script>
+function setLang(lang) {
+  document.querySelectorAll('[data-es]').forEach(el => {
+    el.textContent = el.dataset[lang];
+  });
+}
+setLang('es');
+</script>
+
+</body>
+</html>
